@@ -1,3 +1,12 @@
+Sun Mar  7 00:55:03 2004  Minero Aoki  <aamine@loveruby.net>
+
+	* lib/net/protocol.rb: remove method: InternetMessageIO#address,
+	  port, ip_address, read_timeout(=), socket.
+
+	* lib/net/protocol.rb: simplify code.
+
+	* lib/net/protocol.rb: apply latest coding style.
+
 Sat Mar  6 15:15:05 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/strscan/depend: depends on re.h and regex.h.
